tests/baselines/reference/unusedModuleInModule.errors.txt
tests/cases/compiler/unusedModuleInModule.ts(2,12): error TS6133: 'B' is declared but never used.


==== tests/cases/compiler/unusedModuleInModule.ts (1 errors) ====
    module A {
        module B {}
               ~
!!! error TS6133: 'B' is declared but never used.
    }